--- a/index.html
+++ b/index.html
@@ -510,13 +510,19 @@
                         </ul>
                      </div>
                   </div>
-                  <div class="col-md-6 col-sm-6">
+                  <div class="col-md-3 col-sm-3">
                      <div class="single-footer-widget">
                         <h3>Contact Info</h3>
                         <p><i class="fa fa-map-marker"></i> 4th Floor, Mrudula,sadan Prataproad,Vadodara </p>
                         <p><i class="fa fa-phone"></i>+91-9723408969</p>
                         <p><i class="fa fa-envelope-o"></i> thegraphickers150@gmail.com</p>
                         
+                     </div>
+                  </div>
+				   <div class="col-md-3 col-sm-3">
+                     <div class="single-footer-widget">
+                        <h3>Reach Us</h3>
+                       <iframe src="http://maps.google.com/maps?q=22.325190, 73.197357&z=15&output=embed"  frameborder="0" style="border:0:margin-top:10px;"></iframe>
                      </div>
                   </div>
                </div>
