--- a/printed-clothes.html
+++ b/printed-clothes.html
@@ -579,101 +579,64 @@
 
 
     <!-- Footer Area Start -->
-    <footer class="lesun-footer-area">
-        <div class="footer-top-area section_50">
+      <footer class="lesun-footer-area">
+         <div class="footer-top-area section_50">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-3" style="display: none">
-                        <div class="single-footer-widget footer-logo-widget">
-                            <div class="footer-logo">
-                                <a href="index.html">
-                                    <img src="assets/img/logo-01.jpg" alt="footer logo" />
-                                </a>
-                            </div>
-                            <div class="footer-widget-text" style="display: none">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua.</p>
-                                <p>Suspendisse augue sem, iaculis id fermentum sit amet, finibus eu risus.</p>
-                            </div>
+               <div class="row">
+                  <div class="col-md-3 col-sm-3">
+                     <div class="single-footer-widget footer-logo-widget">
+                        <div class="footer-logo">
+                           <a href="index.html">
+                           <img src="assets/img/logo.png" alt="footer logo" />
+                           </a>
                         </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3" style="display: none;">
-                        <div class="single-footer-widget">
-                            <h3>latest post</h3>
-                            <div class="latest-post-footer clearfix">
-                                <div class="latest-post-footer-left">
-                                    <i class="fa fa-image"></i>
-                                </div>
-                                <div class="latest-post-footer-right">
-                                    <h4><a href="#">Revealed: How to set goals for you and your team</a></h4>
-                                    <p>Jan 14, 2018</p>
-                                </div>
-                            </div>
-                            <div class="latest-post-footer clearfix">
-                                <div class="latest-post-footer-left">
-                                    <i class="fa fa-briefcase"></i>
-                                </div>
-                                <div class="latest-post-footer-right">
-                                    <h4><a href="#">Five ways to improve as a business professional!</a></h4>
-                                    <p>Jan 14, 2018</p>
-                                </div>
-                            </div>
+                        <div class="footer-widget-text">
+                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua.</p>
+                           <p>Suspendisse augue sem, iaculis id fermentum sit amet, finibus eu risus.</p>
                         </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4">
-                        <div class="single-footer-widget ">
-
-                            <h3>Connect With Us</h3>
-                            <div class="footer-widget-text">
-
-
-                                <ul class="footer-icon-social" style="display: -webkit-inline-box;">
-                                    <li><a href="#" class="header_fb"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#" class="header_twitter"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#" class="header_google"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a href="#" class="header_linkdin"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#" class="header_insta"><i class="fa fa-instagram"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4">
-                        <div class="single-footer-widget">
-                            <h3>main links</h3>
-                            <ul>
-                                <li><a href="#"><i class="fa fa-angle-double-right "></i>Home</a></li>
-                                <li><a href="#"><i class="fa fa-angle-double-right "></i>About Us</a></li>
-                                <li><a href="#"><i class="fa fa-angle-double-right "></i>Useful Links</a></li>
-
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4">
-                        <div class="single-footer-widget">
-                            <h3>Reach Us</h3>
-                            <iframe src="http://maps.google.com/maps?q=22.325190, 73.197357&z=15&output=embed" frameborder="0" style="border: 0:margin-top:10px;"></iframe>
-
-                            <!--<p><i class="fa fa-map-marker"></i> 4257 Street, SunnyVale, USA </p>
-                            <p><i class="fa fa-phone"></i> 012-3456-789</p>
-                            <p><i class="fa fa-envelope-o"></i> info@lesun.com</p>
-                            <p><i class="fa fa-envelope-o"></i> info@lesun.com</p>
-                            <p><i class="fa fa-fax"></i> 112-3456-7898</p>-->
-                        </div>
-                    </div>
-                </div>
+                     </div>
+                  </div>
+                  
+                  <div class="col-md-3 col-sm-3">
+                     <div class="single-footer-widget">
+                        <h3>main links</h3>
+                        <ul>
+                          <li><a href="#"><i class="fa fa-angle-double-right "></i> Home</a></li>
+                                <li><a href="#"><i class="fa fa-angle-double-right "></i> About Us</a></li>
+                                <li><a href="#"><i class="fa fa-angle-double-right "></i> Useful Links</a></li>
+                        </ul>
+                     </div>
+                  </div>
+                  <div class="col-md-3 col-sm-3">
+                     <div class="single-footer-widget">
+                        <h3>Contact Info</h3>
+                        <p><i class="fa fa-map-marker"></i> 4th Floor, Mrudula,sadan Prataproad,Vadodara </p>
+                        <p><i class="fa fa-phone"></i>+91-9723408969</p>
+                        <p><i class="fa fa-envelope-o"></i> thegraphickers150@gmail.com</p>
+                        
+                     </div>
+                  </div>
+				   <div class="col-md-3 col-sm-3">
+                     <div class="single-footer-widget">
+                        <h3>Reach Us</h3>
+                       <iframe src="http://maps.google.com/maps?q=22.325190, 73.197357&z=15&output=embed"  frameborder="0" style="border:0:margin-top:10px;"></iframe>
+                     </div>
+                  </div>
+               </div>
             </div>
-        </div>
-        <div class="copyright-area">
+         </div>
+         <div class="copyright-area">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="copyright-right">
-                            <p>&copy; Copyright <a href="#">The Graphickers</a> 2018. All rights reserved</p>
-                        </div>
-                    </div>
-                </div>
+               <div class="row">
+                  <div class="col-md-12">
+                     <div class="copyright-right">
+                        <p>&copy; Copyright <a href="#">The Graphickers</a> 2020. All rights reserved</p>
+                     </div>
+                  </div>
+               </div>
             </div>
-        </div>
-    </footer>
+         </div>
+      </footer>
     <!-- Footer Area End -->
 
 
